--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.4.3",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@types/react-dom": "^19.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
@@ -28,12 +29,13 @@
     "react-icons": "^5.4.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "ts-interface-checker": "^1.0.2",
     "yup": "^1.6.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
