--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/signup/[[...signup]]/page.jsx"  ],
   "exclude": [
     "node_modules"
   ]
